--- a/hexanexus.html
+++ b/hexanexus.html
@@ -11,6 +11,8 @@
     <h1 class="title">Hexanexus</h1>
     <button class="enter-button" onclick="enterSite()">Enter</button>
   </div>
+  <button class="turbo-button" onclick="activateTurbo()">Turbo Mode</button>
+
   <script>
     function enterSite() {
       alert('Welkom bij Hexanexus!');
@@ -18,5 +20,6 @@
       // window.location.href = 'home.html';
     }
   </script>
+  <script src="script.js"></script>
 </body>
 </html>
